--- a/index.html
+++ b/index.html
@@ -128,5 +128,6 @@
                 <a href="https://astralcodexten.substack.com" class="link-item"><img src="https://www.google.com/s2/favicons?domain=substack.com" class="icon"> Astral Codex 10</a>
 		<a href="https://https://restofworld.org/" class="link-item"><img src="https://www.google.com/s2/favicons?domain=restofworld.org" class="icon"> rest of world 10</a>
 		<a href="https://unherd.com/" class="link-item"><img src="https://www.google.com/s2/favicons?domain=unherd.com" class="icon"> UnHerd</a>
+				<a href="https://danwang.co/" class="link-item"><img src="https://www.google.com/s2/favicons?domain=danwang.co" class="icon"> Dan Wang</a>
 
 
