Fix HTML structure by closing div and section tags

--- a/index.html
+++ b/index.html
@@ -130,4 +130,6 @@
 		<a href="https://unherd.com/" class="link-item"><img src="https://www.google.com/s2/favicons?domain=unherd.com" class="icon"> UnHerd</a>
 				<a href="https://danwang.co/" class="link-item"><img src="https://www.google.com/s2/favicons?domain=danwang.co" class="icon"> Dan Wang</a>
 
-
+            </div>
+        </section>
+    </div>
