--- a/index.html
+++ b/index.html
@@ -91,30 +91,30 @@
         <section>
             <h2>Social</h2>
             <div class="link-list">
-                <a href="https://twitter.com" class="link-item"><img src="https://www.google.com/s2/favicons?domain=twitter.com" class="icon"> Twitter</a>
-                <a href="https://linkedin.com" class="link-item"><img src="https://www.google.com/s2/favicons?domain=linkedin.com" class="icon"> LinkedIn</a>
+                <a href="https://twitter.com" class="link-item"><img src="https://www.google.com/s2/favicons?domain=twitter.com" class="icon" alt="Twitter favicon"> Twitter</a>
+                <a href="https://linkedin.com" class="link-item"><img src="https://www.google.com/s2/favicons?domain=linkedin.com" class="icon" alt="LinkedIn favicon"> LinkedIn</a>
             </div>
         </section>
 
         <section>
             <h2>News</h2>
             <div class="link-list">
-                <a href="https://www.tijd.be" class="link-item"><img src="https://www.google.com/s2/favicons?domain=tijd.be" class="icon"> De Tijd</a>
-                <a href="https://www.ft.com" class="link-item"><img src="https://www.google.com/s2/favicons?domain=ft.com" class="icon"> Financial Times</a>
-                <a href="https://www.nytimes.com" class="link-item"><img src="https://www.google.com/s2/favicons?domain=nytimes.com" class="icon"> The New York Times</a>
-                <a href="https://www.eurointelligence.com" class="link-item"><img src="https://www.google.com/s2/favicons?domain=eurointelligence.com" class="icon"> EuroIntelligence</a>
-                <a href="https://www.euractiv.com" class="link-item"><img src="https://www.google.com/s2/favicons?domain=euractiv.com" class="icon"> Euractiv</a>
-                <a href="https://www.semafor.com" class="link-item"><img src="https://www.google.com/s2/favicons?domain=semafor.com" class="icon"> Semafor</a>
-                <a href="https://ground.news" class="link-item"><img src="https://www.google.com/s2/favicons?domain=ground.news" class="icon"> Ground News</a>
-                <a href="https://www.project-syndicate.org" class="link-item"><img src="https://www.google.com/s2/favicons?domain=project-syndicate.org" class="icon"> Project Syndicate</a>
-                <a href="https://www.politico.eu" class="link-item"><img src="https://www.google.com/s2/favicons?domain=politico.eu" class="icon"> Politico.eu</a>
-                <a href="https://www.zerohedge.com" class="link-item"><img src="https://www.google.com/s2/favicons?domain=zerohedge.com" class="icon"> ZeroHedge</a>
-                <a href="https://www.spacedaily.com" class="link-item"><img src="https://www.google.com/s2/favicons?domain=spacedaily.com" class="icon"> Space Daily</a>
-                <a href="https://siliconcontinent.com" class="link-item"><img src="https://www.google.com/s2/favicons?domain=siliconcontinent.com" class="icon"> Siliconcontinent.com</a>
-                <a href="https://www.computable.be" class="link-item"><img src="https://www.google.com/s2/favicons?domain=computable.be" class="icon"> Computable.be</a>
-                <a href="https://www.vrt.be/vrtnws" class="link-item"><img src="https://www.google.com/s2/favicons?domain=vrt.be" class="icon"> VRT</a>
-                <a href="https://store.stratnews.com" class="link-item"><img src="https://www.google.com/s2/favicons?domain=stratnews.com" class="icon"> Store.stratnews.com</a>
-                <a href="https://www.standaard.be" class="link-item"><img src="https://www.google.com/s2/favicons?domain=standaard.be" class="icon"> De Standaard</a>
+                <a href="https://www.tijd.be" class="link-item"><img src="https://www.google.com/s2/favicons?domain=tijd.be" class="icon" alt="De Tijd favicon"> De Tijd</a>
+                <a href="https://www.ft.com" class="link-item"><img src="https://www.google.com/s2/favicons?domain=ft.com" class="icon" alt="Financial Times favicon"> Financial Times</a>
+                <a href="https://www.nytimes.com" class="link-item"><img src="https://www.google.com/s2/favicons?domain=nytimes.com" class="icon" alt="The New York Times favicon"> The New York Times</a>
+                <a href="https://www.eurointelligence.com" class="link-item"><img src="https://www.google.com/s2/favicons?domain=eurointelligence.com" class="icon" alt="EuroIntelligence favicon"> EuroIntelligence</a>
+                <a href="https://www.euractiv.com" class="link-item"><img src="https://www.google.com/s2/favicons?domain=euractiv.com" class="icon" alt="Euractiv favicon"> Euractiv</a>
+                <a href="https://www.semafor.com" class="link-item"><img src="https://www.google.com/s2/favicons?domain=semafor.com" class="icon" alt="Semafor favicon"> Semafor</a>
+                <a href="https://ground.news" class="link-item"><img src="https://www.google.com/s2/favicons?domain=ground.news" class="icon" alt="Ground News favicon"> Ground News</a>
+                <a href="https://www.project-syndicate.org" class="link-item"><img src="https://www.google.com/s2/favicons?domain=project-syndicate.org" class="icon" alt="Project Syndicate favicon"> Project Syndicate</a>
+                <a href="https://www.politico.eu" class="link-item"><img src="https://www.google.com/s2/favicons?domain=politico.eu" class="icon" alt="Politico.eu favicon"> Politico.eu</a>
+                <a href="https://www.zerohedge.com" class="link-item"><img src="https://www.google.com/s2/favicons?domain=zerohedge.com" class="icon" alt="ZeroHedge favicon"> ZeroHedge</a>
+                <a href="https://www.spacedaily.com" class="link-item"><img src="https://www.google.com/s2/favicons?domain=spacedaily.com" class="icon" alt="Space Daily favicon"> Space Daily</a>
+                <a href="https://siliconcontinent.com" class="link-item"><img src="https://www.google.com/s2/favicons?domain=siliconcontinent.com" class="icon" alt="Siliconcontinent.com favicon"> Siliconcontinent.com</a>
+                <a href="https://www.computable.be" class="link-item"><img src="https://www.google.com/s2/favicons?domain=computable.be" class="icon" alt="Computable.be favicon"> Computable.be</a>
+                <a href="https://www.vrt.be/vrtnws" class="link-item"><img src="https://www.google.com/s2/favicons?domain=vrt.be" class="icon" alt="VRT favicon"> VRT</a>
+                <a href="https://store.stratnews.com" class="link-item"><img src="https://www.google.com/s2/favicons?domain=stratnews.com" class="icon" alt="Store.stratnews.com favicon"> Store.stratnews.com</a>
+                <a href="https://www.standaard.be" class="link-item"><img src="https://www.google.com/s2/favicons?domain=standaard.be" class="icon" alt="De Standaard favicon"> De Standaard</a>
             </div>
         </section>
     </div>
@@ -123,13 +123,12 @@
         <section>
             <h2>Inspiration</h2>
             <div class="link-list">
-                <a href="https://marginalrevolution.com" class="link-item"><img src="https://www.google.com/s2/favicons?domain=marginalrevolution.com" class="icon"> Marginal REVOLUTION</a>
-                <a href="https://thezvi.substack.com" class="link-item"><img src="https://www.google.com/s2/favicons?domain=substack.com" class="icon"> thezvi</a>
-                <a href="https://astralcodexten.substack.com" class="link-item"><img src="https://www.google.com/s2/favicons?domain=substack.com" class="icon"> Astral Codex 10</a>
-		<a href="https://https://restofworld.org/" class="link-item"><img src="https://www.google.com/s2/favicons?domain=restofworld.org" class="icon"> rest of world 10</a>
-		<a href="https://unherd.com/" class="link-item"><img src="https://www.google.com/s2/favicons?domain=unherd.com" class="icon"> UnHerd</a>
-				<a href="https://danwang.co/" class="link-item"><img src="https://www.google.com/s2/favicons?domain=danwang.co" class="icon"> Dan Wang</a>
-
+                <a href="https://marginalrevolution.com" class="link-item"><img src="https://www.google.com/s2/favicons?domain=marginalrevolution.com" class="icon" alt="Marginal Revolution favicon"> Marginal REVOLUTION</a>
+                <a href="https://thezvi.substack.com" class="link-item"><img src="https://www.google.com/s2/favicons?domain=substack.com" class="icon" alt="thezvi favicon"> thezvi</a>
+                <a href="https://astralcodexten.substack.com" class="link-item"><img src="https://www.google.com/s2/favicons?domain=substack.com" class="icon" alt="Astral Codex 10 favicon"> Astral Codex 10</a>
+                <a href="https://restofworld.org/" class="link-item"><img src="https://www.google.com/s2/favicons?domain=restofworld.org" class="icon" alt="Rest of World favicon"> Rest of World</a>
+                <a href="https://unherd.com/" class="link-item"><img src="https://www.google.com/s2/favicons?domain=unherd.com" class="icon" alt="UnHerd favicon"> UnHerd</a>
+                <a href="https://danwang.co/" class="link-item"><img src="https://www.google.com/s2/favicons?domain=danwang.co" class="icon" alt="Dan Wang favicon"> Dan Wang</a>
             </div>
         </section>
     </div>
