--- a/index.html
+++ b/index.html
@@ -129,6 +129,8 @@
                 <a href="https://restofworld.org/" class="link-item"><img src="https://www.google.com/s2/favicons?domain=restofworld.org" class="icon" alt="Rest of World favicon"> Rest of World</a>
                 <a href="https://unherd.com/" class="link-item"><img src="https://www.google.com/s2/favicons?domain=unherd.com" class="icon" alt="UnHerd favicon"> UnHerd</a>
                 <a href="https://danwang.co/" class="link-item"><img src="https://www.google.com/s2/favicons?domain=danwang.co" class="icon" alt="Dan Wang favicon"> Dan Wang</a>
+                 <a href="https://www.construction-physics.com/" class="link-item"><img src="https://www.google.com/s2/favicons?domain=construction-physics.com" class="icon" alt="Dan Wang favicon"> Construction Physics</a>
+                
             </div>
         </section>
     </div>
