Add SNScratchpad (snscratchpad.com) to Inspiration section in index.html

--- a/index.html
+++ b/index.html
@@ -123,14 +123,14 @@
         <section>
             <h2>Inspiration</h2>
             <div class="link-list">
-                <a href="https://marginalrevolution.com" class="link-item"><img src="https://www.google.com/s2/favicons?domain=marginalrevolution.com" class="icon" alt="Marginal Revolution favicon"> Marginal REVOLUTION</a>
+                <a href="https://marginalrevolution.com" class="link-item"><img src="https://www.google.com/s2/favicons?domain=marginalrevolution.com" class="icon" alt="Marginal Revolution favicon"> Marginal Revolution</a>
                 <a href="https://thezvi.substack.com" class="link-item"><img src="https://www.google.com/s2/favicons?domain=substack.com" class="icon" alt="thezvi favicon"> thezvi</a>
                 <a href="https://astralcodexten.substack.com" class="link-item"><img src="https://www.google.com/s2/favicons?domain=substack.com" class="icon" alt="Astral Codex 10 favicon"> Astral Codex 10</a>
                 <a href="https://restofworld.org/" class="link-item"><img src="https://www.google.com/s2/favicons?domain=restofworld.org" class="icon" alt="Rest of World favicon"> Rest of World</a>
                 <a href="https://unherd.com/" class="link-item"><img src="https://www.google.com/s2/favicons?domain=unherd.com" class="icon" alt="UnHerd favicon"> UnHerd</a>
                 <a href="https://danwang.co/" class="link-item"><img src="https://www.google.com/s2/favicons?domain=danwang.co" class="icon" alt="Dan Wang favicon"> Dan Wang</a>
-                 <a href="https://www.construction-physics.com/" class="link-item"><img src="https://www.google.com/s2/favicons?domain=construction-physics.com" class="icon" alt="Dan Wang favicon"> Construction Physics</a>
-                
+                <a href="https://www.construction-physics.com/" class="link-item"><img src="https://www.google.com/s2/favicons?domain=construction-physics.com" class="icon" alt="Construction Physics favicon"> Construction Physics</a>
+                <a href="https://snscratchpad.com/" class="link-item"><img src="https://www.google.com/s2/favicons?domain=snscratchpad.com" class="icon" alt="SNScratchpad favicon"> SNScratchpad</a>
             </div>
         </section>
     </div>
